# image-metric-calculator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py  data.py  metrics.py  models.py  upload_data_to_hf.py
